# learning_opengl

./: CMakeLists.txt  main.cpp
shaders/: shader_sources.cpp  shader_sources.h
